# color_checker_plants

./: .gitignore  README.md  pyproject.toml  requirements.txt
color_checker_plants/: __init__.py  correction.py  detection.py  extraction.py  fitting.py  markers.py  utils.py
color_checker_plants/templates/: __init__.py  colorchecker_24.py  grayscale_ramp_50.py  plants_24.py  presets.py  sunflower_12.py
examples/: quick_start.py
scripts/: generate_card.py  process_image.py
